fix(blog): correct margin for post header title for consistent spacing

--- a/projects/perfil-personal/src/app/componentes/blog/blog.scss
+++ b/projects/perfil-personal/src/app/componentes/blog/blog.scss
@@ -21,7 +21,7 @@
 }
 
 .post-header h2 {
-  margin-bottom: 0;
+  margin: 0;
 }
 
 .post-date {
